--- a/index.html
+++ b/index.html
@@ -91,56 +91,55 @@
 									<img src="images/profile1.jpg" class="profile-img img-responsive" alt=""/>
 								</div>
 								<div class="col-md-7">
-									<p>I am jessica, I live in Newyork. I am webdesigner. I know 4 languages. Working on this field for 5+ years and got many design awards.</p>
+									<p>Do you love Coffee? We do. We love it so much that we decided to try as much coffee as we can and tell people all about it.</p>
 								</div>
 							</div>
 							<div class="row">
 
-								<!-- Skills -->
-								<div class="col-md-3 skills-wrap">
-									<h5><span>Skills</span></h5>
-									<ul class="skills" id="skills">
-										<li>
-											<h6>Photoshop</h6>
-											<div class="skill-bar skill-anim"><span style="width:70%"></span></div>
-										</li>
-										<li>
-											<h6>Illustrator</h6>
-											<div class="skill-bar skill-anim"><span style="width:80%"></span></div>
-										</li>
-										<li>
-											<h6>HTML5</h6>
-											<div class="skill-bar skill-anim"><span style="width:50%"></span></div>
-										</li>
-										<li>
-											<h6>Javascript</h6>
-											<div class="skill-bar skill-anim"><span style="width:65%"></span></div>
-										</li>
-									</ul>
-								</div>
+								<!--&lt;!&ndash; Skills &ndash;&gt;-->
+								<!--<div class="col-md-3 skills-wrap">-->
+									<!--<h5><span>Skills</span></h5>-->
+									<!--<ul class="skills" id="skills">-->
+										<!--<li>-->
+											<!--<h6>Photoshop</h6>-->
+											<!--<div class="skill-bar skill-anim"><span style="width:70%"></span></div>-->
+										<!--</li>-->
+										<!--<li>-->
+											<!--<h6>Illustrator</h6>-->
+											<!--<div class="skill-bar skill-anim"><span style="width:80%"></span></div>-->
+										<!--</li>-->
+										<!--<li>-->
+											<!--<h6>HTML5</h6>-->
+											<!--<div class="skill-bar skill-anim"><span style="width:50%"></span></div>-->
+										<!--</li>-->
+										<!--<li>-->
+											<!--<h6>Javascript</h6>-->
+											<!--<div class="skill-bar skill-anim"><span style="width:65%"></span></div>-->
+										<!--</li>-->
+									<!--</ul>-->
+								<!--</div>-->
 
 								<!-- Stats -->
 								<div class="col-md-9">
 									<div id="stats">
-										<h5><span>Awards & Stats</span></h5>
-										<ul class="stats">
-											<li>
-												<i class="icon-trophy"></i>
-												<h4><span class="stat1">50</span>Awards Won</h4>
-											</li>
-											<li>
-												<i class="icon-users"></i>
-												<h4><span class="stat2">150</span>Client works</h4>
-											</li>
-											<li>
-												<i class="icon-chart"></i>
-												<h4><span class="stat3">400</span>Projects</h4>
-											</li>
-											<li>
-												<i class="icon-write"></i>
-												<h4><span class="stat4">250</span>Blogposts</h4>
-											</li>
-										</ul>
+										<!--<ul class="stats">-->
+											<!--<li>-->
+												<!--<i class="icon-trophy"></i>-->
+												<!--<h4><span class="stat1">50</span>Awards Won</h4>-->
+											<!--</li>-->
+											<!--<li>-->
+												<!--<i class="icon-users"></i>-->
+												<!--<h4><span class="stat2">150</span>Client works</h4>-->
+											<!--</li>-->
+											<!--<li>-->
+												<!--<i class="icon-chart"></i>-->
+												<!--<h4><span class="stat3">400</span>Projects</h4>-->
+											<!--</li>-->
+											<!--<li>-->
+												<!--<i class="icon-write"></i>-->
+												<!--<h4><span class="stat4">250</span>Blogposts</h4>-->
+											<!--</li>-->
+										<!--</ul>-->
 										<ul class="social">
 											<li><a href="index.html#" class="fa fa-twitter"></a></li>
 											<li><a href="index.html#" class="fa fa-facebook"></a></li>
@@ -160,36 +159,83 @@
 			</div>
 		</div>
 
-		<!-- Services -->
+			<!-- Survey -->
 		<div id="services">
 			<div class="service-content">
 				<div class="container">
 					<div class="row">
 						<div class="content-head content-head-lite">
-							<h2>What i do ? <span>Lorem ipsum dolor sit amet adipiscing elit. Nunc eget lectus a dolor imperdiet iaculis. Mauris in erat augue. Fusce sed pretium erat, sit amet elementum ipsum.</span></h2>
+							<h2>We've got a question.... <span>Tell us what you think about coffee, our site, and your view of comfy chairs.</span></h2>
 						</div>
-						<div class="clearfix"></div>
-						<div class="col-md-4 col-sm-6">
-							<div class="services-content services-content1">
-								<i class="icon-uni16E"></i>
-								<h4>Web Development</h4>
-								<p>In quis risus at nisi sodales rutrum quam est tempus id sem non dapibus ligula id orci erat eu urna sodales condi mentum.</p>
+						<div class="col-md-8 col-sm-7">
+						<div class="contact-info">
+							<form id="contact" name="contact" method="post" novalidate="novalidate">
+								<div class="col-md-5">
+									<div class="input-wrap">
+										<input type="radio" name="name" id="name" placeholder="How do you take your coffee?" required="">
+										<label class="radio-inline">
+											<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> Black
+										</label>
+										<label class="radio-inline">
+											<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Cream
+										</label>
+										<label class="radio-inline">
+											<input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> Sugar
+										</label>
+										<label class="radio-inline">
+											<input type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option3"> Cream & Sugar
+										</label>
+
+									</div>
+									<div class="input-wrap">
+										<input type="email" name="email" id="email" placeholder="Email Address" required="">
+									</div>
+									<div class="input-wrap">
+										<input type="text" name="subject" id="subject" placeholder="Subject" required="">
+									</div>
+								</div>
+								<div class="col-md-7">
+									<div class="input-wrap">
+										<textarea placeholder="Message" name="message" id="message" required=""></textarea>
+									</div>
+								</div>
+								<button id="submit" type="submit"><i class="icon-location"></i> Send</button>
+							</form>
+							<div id="success">
+								<div>
+									<p><i class="icon-circle-check"></i> Your message was sent successfully! I will be in touch as soon as I can.</p>
+								</div>
+							</div>
+
+							<div id="error">
+								<div>
+									<p><i class="icon-circle-cross"></i> Something went wrong, try refreshing and submitting the form again.</p>
+								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-sm-6">
-							<div class="services-content services-content2">
-								<i class="icon-uniE094"></i>
-								<h4>Social Sharing</h4>
-								<p>In quis risus at nisi sodales rutrum quam est tempus id sem non dapibus ligula id orci erat eu urna sodales condi mentum.</p>
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-12">
-							<div class="services-content services-content3">
-								<i class="icon-uni17F"></i>
-								<h4>Customer Support</h4>
-								<p>In quis risus at nisi sodales rutrum quam est tempus id sem non dapibus ligula id orci erat eu urna sodales condi mentum.</p>
-							</div>
-						</div>
+					</div>
+						<!--<div class="clearfix"></div>-->
+						<!--<div class="col-md-4 col-sm-6">-->
+							<!--<div class="services-content services-content1">-->
+								<!--<i class="icon-uni16E"></i>-->
+								<!--<h4>Web Development</h4>-->
+								<!--<p>In quis risus at nisi sodales rutrum quam est tempus id sem non dapibus ligula id orci erat eu urna sodales condi mentum.</p>-->
+							<!--</div>-->
+						<!--</div>-->
+						<!--<div class="col-md-4 col-sm-6">-->
+							<!--<div class="services-content services-content2">-->
+								<!--<i class="icon-uniE094"></i>-->
+								<!--<h4>Social Sharing</h4>-->
+								<!--<p>In quis risus at nisi sodales rutrum quam est tempus id sem non dapibus ligula id orci erat eu urna sodales condi mentum.</p>-->
+							<!--</div>-->
+						<!--</div>-->
+						<!--<div class="col-md-4 col-sm-12">-->
+							<!--<div class="services-content services-content3">-->
+								<!--<i class="icon-uni17F"></i>-->
+								<!--<h4>Customer Support</h4>-->
+								<!--<p>In quis risus at nisi sodales rutrum quam est tempus id sem non dapibus ligula id orci erat eu urna sodales condi mentum.</p>-->
+							<!--</div>-->
+						<!--</div>-->
 					</div>
 				</div>
 			</div>
@@ -258,7 +304,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="content-head content-head-lite">
-							<h2>My Works <span>I have worked with some ofthe best projects consectetur adipiscing elit. Nunc eget lectus a dolor imperdiet iaculis. Mauris in erat augue. Fusce sed pretium erat, sit amet elementum ipsum..</span></h2>
+							<h2>Reviews <span> </span></h2>
 						</div>
 						<div class="clearfix"></div>
 						<div class="row">
