--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="content-head content-head-lite">
-							<h2>Reviews <span> </span></h2>
+							<h2>Reviews <span> This is some coffee we've consumed. Hear what we had to say. </span></h2>
 						</div>
 						<div class="clearfix"></div>
 						<div class="row">
