--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 </head>
 
-<body id="page-top" class="index">
+<body id="page-top" class="index">ƒli
 
 <div class="white-bdr-left"></div>
 <div class="white-bdr-right"></div>
@@ -62,8 +62,8 @@
 			<li><a href="index.html#page-top" class="page-scroll">Home <i class="fa fa-angle-right"></i></a></li>
 			<li><a href="index.html#aboutme" class="page-scroll">About Us <i class="fa fa-angle-right"></i></a></li>
 			<li><a href="index.html#services" class="page-scroll">Survey <i class="fa fa-angle-right"></i></a></li>
-			<li><a href="index.html#resume" class="page-scroll">List of Stuff <i class="fa fa-angle-right"></i></a></li>
-			<li><a href="index.html#works" class="page-scroll">Categories <i class="fa fa-angle-right"></i></a></li>
+			<li><a href="index.html#resume" class="page-scroll">FAQ <i class="fa fa-angle-right"></i></a></li>
+			<li><a href="index.html#works" class="page-scroll">Reviews <i class="fa fa-angle-right"></i></a></li>
 			<!--<li><a href="index.html#featured" class="page-scroll">Featured Works <i class="fa fa-angle-right"></i></a></li>-->
 			<!--<li><a href="index.html#blog" class="page-scroll">Blog <i class="fa fa-angle-right"></i></a></li>-->
 			<li><a href="index.html#contact-wrap" class="page-scroll">Contact <i class="fa fa-angle-right"></i></a></li>
@@ -88,8 +88,11 @@
 						<div class="col-md-12">
 							<div class="row about-me">
 								<div class="col-md-5">
+
 									<img src="images/profile1.jpg" class="profile-img img-responsive" alt=""/>
-								</div>
+
+
+ 								</div>
 								<div class="col-md-7">
 									<p>Do you love Coffee? We do. We love it so much that we decided to try as much coffee as we can and tell people all about it.</p>
 								</div>
@@ -248,49 +251,97 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="content-head content-head-lite">
-								<h2>Resume <span>Lorem ipsum dolor sit amet adipiscing elit. Nunc eget lectus a dolor imperdiet iaculis. Mauris in erat augue. Fusce sed pretium erat, sit amet elementum ipsum.</span></h2>
+								<h2>FAQs <span> You've got questions, we've got the answers. ( well, three of the answers )</span></h2>
 							</div>
 
 							<div class="row">
 
 								<!-- Education -->
-								<div class="col-md-6">
-									<h5><i class="icon-book"></i> Education</h5>
-									<ul>
-										<li>
-											<h3>Master of Fine Arts</h3>
-											<h4>Design University <span>[ 2010 - 2012 ]</span></h4>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget lectus a dolor imperdiet iaculis. Mauris in erat augue. Fusce sed pretium erat, sit amet elementum ipsum. Nullam molestie libero ut arcu suscipit sodales.</p>
-										</li>
-										<li>
-											<h3>Bachelor of Fine Arts</h3>
-											<h4>Design University <span>[ 2008 - 2010 ]</span></h4>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget lectus a dolor imperdiet iaculis. Mauris in erat augue. Fusce sed pretium erat, sit amet elementum ipsum. Nullam molestie libero ut arcu suscipit sodales.</p>
-										</li>
-										<li>
-											<h3>Diploma of Fine Arts</h3>
-											<h4>Design University <span>[ 2007 - 2008 ]</span></h4>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget lectus a dolor imperdiet iaculis. Mauris in erat augue. Fusce sed pretium erat, sit amet elementum ipsum. Nullam molestie libero ut arcu suscipit sodales.</p>
-										</li>
-									</ul>
+								<div class="bs-example" data-example-id="collapse-accordion">
+									<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+										<div class="panel panel-default">
+											<div class="panel-heading" role="tab" id="headingOne">
+												<h4 class="panel-title" id="-collapsible-group-item-#1-">
+													<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">
+														Why can't I have coffee right now?
+													</a>
+													<a class="anchorjs-link" href="#-collapsible-group-item-#1-"><span class="anchorjs-icon"></span></a></h4>
+											</div>
+											<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
+												<div class="panel-body">
+													We don't know! Maybe you're stuck in an office workspace with no coffee because your supervisor ( or founder of programs ) is lame and won't provide you with coffee. Maybe you just forgot to buy coffee today. Write it down next time, genius.
+												</div>
+											</div>
+										</div>
+										<div class="panel panel-default">
+											<div class="panel-heading" role="tab" id="headingTwo">
+												<h4 class="panel-title" id="-collapsible-group-item-#2-">
+													<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+														Can you bring me coffee?
+													</a>
+													<a class="anchorjs-link" href="#-collapsible-group-item-#2-"><span class="anchorjs-icon"></span></a></h4>
+											</div>
+											<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false" style="height: 0px;">
+												<div class="panel-body">
+													No. We don't have any coffee. Ask someone who does.
+												</div>
+
+											</div>
+										</div>
+										<div class="panel panel-default">
+											<div class="panel-heading" role="tab" id="headingThree">
+												<h4 class="panel-title" id="-collapsible-group-item-#3-">
+													<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+														Where is the best coffee?
+													</a>
+													<a class="anchorjs-link" href="#-collapsible-group-item-#3-"><span class="anchorjs-icon"></span></a></h4>
+											</div>
+											<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false" style="height: 0px;">
+												<div class="panel-body">
+													The best coffee is probably in a secluded villa somewhere off in Brazil being made by trained monkeys and fed to rich people. But for now, just buy coffee and drink it. Stop thinking about the monkeys.
+												</div>
+
+											</div>
+										</div>
+									</div>
 								</div>
+								<!--<div class="col-md-6">-->
+									<!--<h5><i class="icon-book"></i> Education</h5>-->
+									<!--<ul>-->
+										<!--<li>-->
+											<!--<h3>Master of Fine Arts</h3>-->
+											<!--<h4>Design University <span>[ 2010 - 2012 ]</span></h4>-->
+											<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget lectus a dolor imperdiet iaculis. Mauris in erat augue. Fusce sed pretium erat, sit amet elementum ipsum. Nullam molestie libero ut arcu suscipit sodales.</p>-->
+										<!--</li>-->
+										<!--<li>-->
+											<!--<h3>Bachelor of Fine Arts</h3>-->
+											<!--<h4>Design University <span>[ 2008 - 2010 ]</span></h4>-->
+											<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget lectus a dolor imperdiet iaculis. Mauris in erat augue. Fusce sed pretium erat, sit amet elementum ipsum. Nullam molestie libero ut arcu suscipit sodales.</p>-->
+										<!--</li>-->
+										<!--<li>-->
+											<!--<h3>Diploma of Fine Arts</h3>-->
+											<!--<h4>Design University <span>[ 2007 - 2008 ]</span></h4>-->
+											<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget lectus a dolor imperdiet iaculis. Mauris in erat augue. Fusce sed pretium erat, sit amet elementum ipsum. Nullam molestie libero ut arcu suscipit sodales.</p>-->
+										<!--</li>-->
+									<!--</ul>-->
+								<!--</div>-->
 
 								<!-- Experience -->
-								<div class="col-md-6">
-									<h5><i class="fa fa-briefcase"></i> Experience</h5>
-									<ul>
-										<li>
-											<h3>Design Corporation</h3>
-											<h4>UX Developer<span>[ 2013 - 2014 ]</span></h4>
-											<p>Lorem ipsum dolor sit amet consec tetur adipi scing elit nunc eget lectus a dolor imperdiet iaculis erat augue sed pretium erat sit amet elementum ipsum molestie libero ut arcu suscipit sodales.</p>
-										</li>
-										<li>
-											<h3>Creative Design Studio</h3>
-											<h4>Developer<span>[ 2014 - Present ]</span></h4>
-											<p>Lorem ipsum dolor sit amet consec tetur adipi scing elit nunc eget lectus a dolor imperdiet iaculis erat augue sed pretium erat sit amet elementum ipsum molestie libero ut arcu suscipit sodales.</p>
-										</li>
-									</ul>
-								</div>
+								<!--<div class="col-md-6">-->
+									<!--<h5><i class="fa fa-briefcase"></i> Experience</h5>-->
+									<!--<ul>-->
+										<!--<li>-->
+											<!--<h3>Design Corporation</h3>-->
+											<!--<h4>UX Developer<span>[ 2013 - 2014 ]</span></h4>-->
+											<!--<p>Lorem ipsum dolor sit amet consec tetur adipi scing elit nunc eget lectus a dolor imperdiet iaculis erat augue sed pretium erat sit amet elementum ipsum molestie libero ut arcu suscipit sodales.</p>-->
+										<!--</li>-->
+										<!--<li>-->
+											<!--<h3>Creative Design Studio</h3>-->
+											<!--<h4>Developer<span>[ 2014 - Present ]</span></h4>-->
+											<!--<p>Lorem ipsum dolor sit amet consec tetur adipi scing elit nunc eget lectus a dolor imperdiet iaculis erat augue sed pretium erat sit amet elementum ipsum molestie libero ut arcu suscipit sodales.</p>-->
+										<!--</li>-->
+									<!--</ul>-->
+								<!--</div>-->
 							</div>
 						</div>
 					</div>
@@ -312,11 +363,11 @@
 								<!-- Filter -->
 								<ul class="folio-filter" data-option-key="filter">
 									<li><a class="selected" href="index.html#filter" data-option-value="*">All</a></li>
-									<li><a href="index.html#filter" data-option-value=".web">Web</a></li>
-									<li><a href="index.html#filter" data-option-value=".illustrations">Illustrations</a></li>
-									<li><a href="index.html#filter" data-option-value=".print">Print</a></li>
-									<li><a href="index.html#filter" data-option-value=".branding">Branding</a></li>
-									<li><a href="index.html#filter" data-option-value=".packaging">Packaging</a></li>
+									<li><a href="index.html#filter" data-option-value=".beans">Beans</a></li>
+									<li><a href="index.html#filter" data-option-value=".shops">Shops</a></li>
+									<li><a href="index.html#filter" data-option-value=".hot">Hot</a></li>
+									<li><a href="index.html#filter" data-option-value=".cold">Cold</a></li>
+									<li><a href="index.html#filter" data-option-value=".espresso">Espresso</a></li>
 								</ul>
 							</div>
 							<!-- Works Content -->
@@ -324,98 +375,98 @@
 								<div class="portfolio-grid">
 									<div id="folio" class="isotope">
 										<div id="da-thumbs" class="da-thumbs">
-											<div class="folio-item isotope-item web packaging">
+											<div class="folio-item isotope-item cold">
 												<a href="images/projects/1/1.jpg" class="prettyPhoto">
 													<div class="folio-thumb">
 														<img src="images/projects/1.jpg" class="img-responsive" alt=""/>	
 													</div>
 												</a>
 												<div class="folio-overlay">
-													<h4><a href="index.html#">Project Title</a></h4>
+													<h4><a href="index.html#">Cinnamon Iced Latte</a></h4>
 												</div>
 												<i class="icon-uni17D"></i>
 											</div>
 
-											<div class="folio-item isotope-item illustrations">
+											<div class="folio-item isotope-item espresso cold">
 												<a href="images/projects/1/2.jpg" class="prettyPhoto">
 													<div class="folio-thumb">
 														<img src="images/projects/2.jpg" class="img-responsive" alt=""/>	
 													</div>
 												</a>
 												<div class="folio-overlay">
-													<h4><a href="index.html#">Project Title</a></h4>
+													<h4><a href="index.html#">Milton Cold Brew</a></h4>
 												</div>
 												<i class="icon-uni17D"></i>
 											</div>
 
-											<div class="folio-item isotope-item web print">
+											<div class="folio-item isotope-item beans shops espresso">
 												<a href="images/projects/1/3.jpg" class="prettyPhoto">
 													<div class="folio-thumb">
 														<img src="images/projects/3.jpg" class="img-responsive" alt=""/>	
 													</div>
 												</a>
 												<div class="folio-overlay">
-													<h4><a href="index.html#">Project Title</a></h4>
+													<h4><a href="index.html#">Portola Espresso Beans</a></h4>
 												</div>
 												<i class="icon-uni17D"></i>
 											</div>
 
-											<div class="folio-item isotope-item illustrations">
+											<div class="folio-item isotope-item cold shop">
 												<a href="images/projects/1/4.jpg" class="prettyPhoto">
 													<div class="folio-thumb">
 														<img src="images/projects/4.jpg" class="img-responsive" alt=""/>	
 													</div>
 												</a>
 												<div class="folio-overlay">
-													<h4><a href="index.html#">Project Title</a></h4>
+													<h4><a href="index.html#">Vietnamese Iced Coffee</a></h4>
 												</div>
 												<i class="icon-uni17D"></i>
 											</div>
 
-											<div class="folio-item isotope-item print branding">
+											<div class="folio-item isotope-item beans hot">
 												<a href="images/projects/1/5.jpg" class="prettyPhoto">
 													<div class="folio-thumb">
 														<img src="images/projects/5.jpg" class="img-responsive" alt=""/>	
 													</div>
 												</a>
 												<div class="folio-overlay">
-													<h4><a href="index.html#">Project Title</a></h4>
+													<h4><a href="index.html#">Chemix Brewed Coffee</a></h4>
 												</div>
 												<i class="icon-uni17D"></i>
 											</div>
 
-											<div class="folio-item isotope-item branding">
+											<div class="folio-item isotope-item cold">
 												<a href="images/projects/1/6.jpg" class="prettyPhoto">
 													<div class="folio-thumb">
 														<img src="images/projects/6.jpg" class="img-responsive" alt=""/>	
 													</div>
 												</a>
 												<div class="folio-overlay">
-													<h4><a href="index.html#">Project Title</a></h4>
+													<h4><a href="index.html#">Wandeing Bear Cold Brew</a></h4>
 												</div>
 												<i class="icon-uni17D"></i>
 											</div>
 
-											<div class="folio-item isotope-item packaging">
+											<div class="folio-item isotope-item espresso shops">
 												<a href="images/projects/1/7.jpg" class="prettyPhoto">
 													<div class="folio-thumb">
 														<img src="images/projects/7.jpg" class="img-responsive" alt=""/>	
 													</div>
 												</a>
 												<div class="folio-overlay">
-													<h4><a href="index.html#">Project Title</a></h4>
+													<h4><a href="index.html#">Espresso Shop</a></h4>
 												</div>
 												<i class="icon-uni17D"></i>
 											</div>
 
-											<div class="folio-item isotope-item branding">
+											<div class="folio-item isotope-item hot shops">
 												<a href="images/projects/1/8.jpg" class="prettyPhoto">
 													<div class="folio-thumb">
 														<img src="images/projects/8.jpg" class="img-responsive" alt=""/>	
 													</div>
 												</a>
 												<div class="folio-overlay">
-													<h4><a href="index.html#">Project Title</a></h4>
+													<h4><a href="index.html#">French Roast</a></h4>
 												</div>
 												<i class="icon-uni17D"></i>
 											</div>
