--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
 	<title>A Latte Love</title>
 
+
+	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
+	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
+
+
 	<!-- Mobile Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -50,6 +58,7 @@
 <div class="white-bdr-top"></div>
 <div class="white-bdr-bottom"></div>
 
+
 <div class="body">
 	<!-- Side Navigation -->
 	<a id="menu-toggle" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
@@ -79,6 +88,8 @@
 		</div>
 	</div>
 
+
+
 	<!-- About Me -->
 	<div class="inner-content">
 		<div id="aboutme">
@@ -89,7 +100,66 @@
 							<div class="row about-me">
 								<div class="col-md-5">
 
-									<img src="images/profile1.jpg" class="profile-img img-responsive" alt=""/>
+
+									<body onLoad="$('#my-modal').modal('show');">
+									<div id="my-modal" class="modal fade">
+										<div class="modal-dialog">
+											<div class="modal-content">
+												<div class="modal-header">
+													<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+													<h4 class="modal-title">Title</h4>
+												</div>
+												<div class="modal-body">
+													Hello World!
+												</div>
+											</div>
+										</div>
+									</div>
+
+
+
+
+									<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+										<!-- Indicators -->
+										<ol class="carousel-indicators">
+											<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+											<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+											<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+										</ol>
+
+										<!-- Wrapper for slides -->
+										<div class="carousel-inner" role="listbox">
+											<div class="item active">
+												<img src="images/coffee-2.jpg"; alt="">
+												<div class="carousel-caption">
+
+												</div>
+											</div>
+											<div class="item">
+												<img src="images/coffee-1.jpg"; alt="">
+												<div class="carousel-caption">
+
+												</div>
+											</div>
+											<div class="item">
+												<img src="images/coffee-3.jpg"; alt="">
+												<div class="carousel-caption">
+
+												</div>
+											</div>
+
+										</div>
+
+										<!-- Controls -->
+										<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+											<!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
+											<span class="sr-only">Previous</span>
+										</a>
+										<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+											<!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
+											<span class="sr-only">Next</span>
+										</a>
+									</div>
 
 
  								</div>
@@ -644,7 +714,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<p>&copy; 2015. Dkpixels. All rights reserved</p>
+						<p>&copy; blah blah blah</p>
 					</div>
 				</div>
 			</div>
