--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="content-head content-head-lite">
-							<h2>Can we talk ? <span class="survey-text">Tell us what you think about coffee, our site, and your view of comfy chairs.</span></h2>
+							<h2>Can we talk ? <span class="survey-text">Tell us what you think about coffee, our site, and about yourself.</span></h2>
 						</div>
 						<div class="conatiner survey-text">
 							<form id="survey" name="survey" method="post" class="form-horizontal">
